# Text-Editor

./: .gitignore  AppDelegate.h  AppDelegate.m  CMakeLists.txt  Makefile  README.md  main.cpp  main.mm  run_build.sh
src/: hello.cpp
